# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "abstract_fs"
version = "0.1.0"
authors = ["The ICU4X Project Developers"]
repository = "https://github.com/unicode-org/icu4x"
edition = "2018"
license-file = "LICENSE"
keywords = ["fs", "filesystem", "zip"]
description = "Traits for file system operations, implemented on various backends."
documentation = "https://docs.rs/litemap"
readme = "./README.md"
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-trait = { version = "0.1.51" }
async-fs = { version = "1.5.0" }
zip = { version = "0.5.13" }

[dev-dependencies]
tokio = { version = "1" }

[features]
