# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "asciitrie"
description = "A data structure that efficiently stores ASCII strings"
version = "0.1.0"
authors = ["The ICU4X Project Developers"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license = "Unicode-DFS-2016"
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-all-features]
# Bench feature gets tested separately and is only relevant for CI
# LiteMap is intended to be enabled by the "builder" feature
denylist = ["bench", "litemap"]

[dependencies]
zerovec = { path = "../../utils/zerovec", optional = true }
litemap = { path = "../../utils/litemap", default-features = false, optional = true }
ref-cast = { version = "1.0.12", optional = true }

[dev-dependencies]
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false }
zerovec = { path = "../../utils/zerovec", features = ["serde"] }
litemap = { path = "../../utils/litemap" }
criterion = "0.3"

[lib]
bench = false  # This option is required for Benchmark CI
path = "src/lib.rs"

[features]
default = ["ref-cast"]
bench = []
# Note: ref-cast is needed for alloc due to the ToOwned/Borrow impl.
alloc = ["litemap?/alloc", "ref-cast"]
builder = ["alloc", "litemap", "zerovec/derive"]

[[bench]]
name = "overview"
harness = false

[[test]]
name = "builder_test"
required-features = ["builder"]
