[package]
name = "experimental_sffc"
version = "0.1.0"
authors = ["The ICU4X Project Developers"]
repository = "https://github.com/unicode-org/icu4x"
edition = "2018"
license-file = "../../LICENSE"
keywords = []
description = "Experimental directory for sffc"
readme = "./README.md"

[dependencies]
serde = "1"
serde_json = "1"
bincode = "1"
postcard = { version = "0.6", features = ["use-std"] }
rkyv = { version = "0.5", features = ["validation"] }
bytecheck = { version = "0.4" }
icu_locid = { version = "0.1", path = "../../components/locid" }
icu_locid_macros = { version = "0.1", path = "../../components/locid/macros" }
icu_benchmark_macros = { version = "0.1", path = "../../tools/benchmark/macros" }
fixed_decimal = { version = "0.1", path = "../../utils/fixed_decimal" }
writeable = { version = "0.2", path = "../../utils/writeable" }
tinystr = { version = "0.4" }
pod = "0.5"
