# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_capi"
description = "C interface to ICU4X"
version = "0.1.0"
authors = ["The ICU4X Project Developers"]
edition = "2018"
resolver = "2"
repository = "https://github.com/unicode-org/icu4x"
license-file = "LICENSE"
categories = ["internationalization"]
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "include/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[package.metadata.docs.rs]
all-features = true

[gn.package.atomic-polyfill."0.1.5"]
rustflags = []

# NOTE: Manually generated
[gn.package.bare-metal."0.2.5"]
rustflags = []

[gn.package.camino."1.0.5"]
rustflags = ["--cfg=path_buf_capacity"]

[gn.package.cortex-m."0.7.3"]
rustflags = []

[gn.package.critical-section."0.2.5"]
rustflags = []

[gn.package.erased-serde."0.3.16"]
rustflags = []

# NOTE: Manually generated
[gn.package.icu_segmenter."0.1.0"]
rustflags = []

[gn.package.heapless."0.7.7"]
rustflags = ["--cfg=has_cas", "--cfg=has_atomics"]

[gn.package.log."0.4.14"]
rustflags = ["--cfg=atomic_cas", "--cfg=has_atomics"]

[gn.package.proc-macro2."1.0.32"]
rustflags = ["--cfg=lexerror_display", "--cfg=hygiene", "--cfg=literal_from_str", "--cfg=use_proc_macro", "--cfg=wrap_proc_macro"]

[gn.package.riscv."0.7.0"]
rustflags = []

[gn.package.ryu."1.0.5"]
rustflags = ["--cfg=integer128", "--cfg=maybe_uninit"]

[gn.package.serde."1.0.130"]
rustflags = ["--cfg=ops_bound", "--cfg=core_reverse", "--cfg=de_boxed_c_str", "--cfg=de_boxed_path", "--cfg=de_rc_dst", "--cfg=core_duration", "--cfg=integer128", "--cfg=range_inclusive", "--cfg=iterator_try_fold", "--cfg=num_nonzero", "--cfg=serde_derive", "--cfg=core_try_from", "--cfg=num_nonzero_signed", "--cfg=systemtime_checked_add", "--cfg=std_atomic64", "--cfg=std_atomic"]

[gn.package.serde_derive."1.0.130"]
rustflags = ["--cfg=underscore_consts", "--cfg=ptr_addr_of"]

# # NOTE: Manually generated
[gn.package.serde_json."1.0.69"]
rustflags = []

[gn.package.syn."1.0.81"]
rustflags = ["--cfg=syn_disable_nightly_tests"]

[package.metadata.cargo-all-features]
# Omit most optional dependency features from permutation testing
skip_optional_dependencies = true
# Bench feature gets tested separately and is only relevant for CI.
# wearos/freertos/x86tiny are not relevant in normal environments,
# smaller_static gets tested on the FFI job anyway
denylist = ["bench", "wearos", "freertos", "x86tiny", "smaller_static"]

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[features]
default = ["provider_static"]
wearos = ["smaller_static", "freertos"]

# provider_fs = ["icu_provider_fs", "icu_provider_fs/deserialize_json"]
provider_static = ["icu_testdata"]
smaller_static = ["provider_static"]

# Only 1 of the following features can be set. Doing so disables std and
# replaces the global allocator and panic handler with something else.
# If multiple of these features are set, it is as if none of them are set.

# Enables size-optimized builds on x86_64
x86tiny = ["dlmalloc"]

# Enables no_std builds for freertos
freertos = ["freertos-rust", "cortex-m"]

[dependencies]
fixed_decimal = { path = "../../utils/fixed_decimal" }
icu_decimal = { path = "../../components/decimal/" }
icu_locale_canonicalizer = { path = "../../components/locale_canonicalizer" }
icu_locid = { path = "../../components/locid" }
icu_locid_macros = { path = "../../components/locid/macros" }
icu_plurals = { path = "../../components/plurals/" }
icu_properties = { path = "../../components/properties/" }
icu_provider = { path = "../../provider/core", features = ["serde"] }
icu_provider_blob = { path = "../../provider/blob" }
icu_segmenter = { path = "../../experimental/segmenter" }
tinystr = { version = "0.4.10", features = ["alloc"], default-features = false }
writeable = { path = "../../utils/writeable/" }

# Run `cargo make diplomat-install` to get the right diplomat binary installed
diplomat = { git = "https://github.com/rust-diplomat/diplomat", rev = "b448e1e272b70eae1cb2e6b7d0a2f0c68905d49a" }
diplomat-runtime = { git = "https://github.com/rust-diplomat/diplomat", rev = "b448e1e272b70eae1cb2e6b7d0a2f0c68905d49a" }
icu_testdata = { version = "0.4", path = "../../provider/testdata", default-features = false, features = ["static"], optional = true }

# This cfg originates in dlmalloc/lib.rs
[target.'cfg(any(target_os = "linux", target_os = "macos", target_arch = "wasm32"))'.dependencies]
dlmalloc = { version = "0.2", optional = true, features = ["global"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = { version = "0.4" }

[target.'cfg(not(any(target_arch = "wasm32", target_os = "none")))'.dependencies]
icu_provider_fs = { path = "../../provider/fs/", optional = true }

[target.'cfg(target_os = "none")'.dependencies]
freertos-rust = { version = "0.1.2", optional = true }
cortex-m = { version = "0.7.3", optional = true }

# Unfortunately, --crate-type cannot be set per-target
# (https://github.com/rust-lang/cargo/issues/4881)
# and emscripten has link errors when compiling icu_capi due to
# symbols like log_js being undefined. There is no way to ask Cargo
# to only build a particular crate type for an invocation
#
# As a workaround, we define an example crate that just reexports icu_capi,
# but is built as a cdylib. Due to how Cargo invocations work around examples,
# `--features` is still passed down to `icu_capi`, but the end result is an
# `icu_capi_cdylib.wasm`/`icu_capi_cdylib.so`/etc file that is for all intents
# and purposes identical to the file one would get from adding "cdylib" to
# `crate-type` above.
[[example]]
name = "icu_capi_cdylib"
path = "src/crate_type_hack.rs"
crate-type = ["cdylib"]
