# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "litemap"
version = "0.1.1"
authors = ["The ICU4X Project Developers"]
repository = "https://github.com/unicode-org/icu4x"
edition = "2018"
license-file = "../../LICENSE"
keywords = ["sorted", "vec", "map", "hashmap", "btreemap"]
description = "A key-value Map implementation based on a flat, sorted Vec."
documentation = "https://docs.rs/litemap"
readme = "./README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", optional = true }
rkyv = { version = "0.5", features = ["validation"] }
bytecheck = { version = "0.4" }

[dev-dependencies]
serde = "1"
serde_json = "1"
bincode = "1"
postcard = { version = "0.6", features = ["use-std"] }
icu_locid = { version = "0.1", path = "../../components/locid" }
icu_locid_macros = { version = "0.1", path = "../../components/locid/macros" }
icu_benchmark_macros = { version = "0.1", path = "../../tools/benchmark/macros" }

[[test]]
name = "serde"
required-features = ["serde"]

[[example]]
name = "litemap_bincode"
path = "benches/bin/litemap_bincode.rs"
required-features = ["serde"]

[[example]]
name = "litemap_postcard"
path = "benches/bin/litemap_postcard.rs"
required-features = ["serde"]

[[example]]
name = "litemap_rkyv_archive"
path = "benches/bin/litemap_rkyv_archive.rs"

[[example]]
name = "litemap_rkyv_deserialize"
path = "benches/bin/litemap_rkyv_deserialize.rs"
